添加了gRPC，多个服务器可以互相远程调用

--- a/TODO
+++ b/TODO
@@ -1,2 +1,19 @@
-离线消息推送 ✔
-客户端 ✔
+客户端发送消息给服务端，服务端需要返回ACK消息，否则客户端需要超时重发。
+客户端中收到 PushMsg 类型消息，向服务端回复 AT_Push 类型的 ACK，表明已收到
+
+
+clientId由服务端维护，每一个websocketconn都会有一个clientId，从0开始计数
+
+上行消息
+客户端发送消息后接收ACK：
+客户端发送消息后等待接收ACK，如果没有收到ACK会在一定的时间间隔内重发消息
+客户端收到ACK后，会更新ClientId以及seq
+
+
+下行消息
+客户端接收服务端发送过来的消息
+
+客户端接收服务端发送的消息后，会更新 seq ， 发送clientId给服务端，让服务端判断 给服务端发送一个ACK
+服务端要判断ACK
+
+TODO 程序崩溃时，redis里的数据要清空（需要实现吗？）
